name:                yesod-auth-xing
version:             0.0.1
synopsis:
description:
license:             BSD3
license-file:        LICENSE
category:            Web
copyright:           Copyright 2013 Jan Ahrens
author:              Jan Ahrens
maintainer:          Jan Ahrens
cabal-version:       >=1.10
homepage:            http://github.com/JanAhrens/yesod-auth-xing
bug-reports:         http://github.com/JanAhrens/yesod-auth-xing/issues
build-type:          Simple

flag demos
  default:           False
  description:       Build demo programms

source-repository head
  type:              git
  location:          http://github.com/JanAhrens/yesod-auth-xing.git

library
  exposed-modules:     Yesod.Auth.XING

  build-depends:       base                    == 4.5.*
                     , containers              == 0.4.*
                     , time                    == 1.4.*
                     , text                    == 0.11.*
                     , authenticate-oauth      == 1.4.*
                     , http-types              == 0.8.*
                     , http-conduit            == 1.8.*
                     , resourcet               == 0.4.*
                     , transformers            == 0.2.*
                     , text                    == 0.11.*
                     , bytestring              == 0.9.*
                     , aeson                   == 0.6.*
                     , lifted-base             == 0.2.*
                     , monad-control           == 0.3.*
                     , yesod-core              == 1.1.*
                     , yesod-auth              == 1.1.*
                     , hamlet                  == 1.1.*
                     , xing-api                == 0.0.*

  hs-source-dirs:    lib
  ghc-options:       -Wall -Werror
  default-language:  Haskell2010

executable yesod-auth
  hs-source-dirs:    demos
  if flag(demos)
    buildable:       True
    build-depends:     base                    == 4.*
                     , bytestring              == 0.9.*
                     , containers              == 0.4.*
                     , hamlet                  == 1.1.*
                     , http-conduit            == 1.8.*
                     , shakespeare-i18n        == 1.0.*
                     , shakespeare-js          == 1.1.*
                     , text                    == 0.11.*
                     , time                    == 1.4.*
                     , warp                    == 1.3.*
                     , xing-api
                     , yesod-auth-xing
                     , yesod-auth              == 1.1.*
                     , yesod-core              == 1.1.*
                     , yesod-form              == 1.2.*
  else
    buildable:       False
  main-is:           yesod-auth.hs
  GHC-options:       -Wall -Werror
  Default-language:  Haskell2010
